Sat Feb 28 15:18:36 1998  Tim Janik  <timj@gimp.org>
	
	* gtk/gtkpreview.c: fix behavior of gtk_preview_put() with
	srcx/srcy != 0, gtk-shige-980127-0.patch.gz by
	AOSASA Shigeru <aozasa@sakuranet.or.jp>.

	* gdk: applied gtk-roebling-980121-0.patch.gz, patch for region
	support in Gdk, by Robert Roebling <roebling@ruf.uni-freiburg.de>.

Fri Feb 27 15:31:55 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtktipsquery.c: we make an active server grab now, this way we
	can change the cursor globally and don't need to tweak event masks
	of other windows.

	* gtk/gtkframe.c (gtk_frame_style_set): recompute label size.

	* gtk/gtkwidget.h:
	* gtk/gtkwidget.c:
	New signal GtkWidget::style_set to be emitted when a widget's style
 	changed. New flag GTK_RC_STYLE to indicate whether an rc lookup has
	been perfomed for the widget.
	(gtk_widget_ensure_style): New function.
	(gtk_widget_set_rc_style): New function.

	* docs/styles.txt: new file.

Fri Feb 27 01:11:55 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtktext.c

	- gtk_text_delete and gtk_text_insert now update caches
	and refresh screen correctly if the text widget isn't frozen.
       
	- Fixed bug where text->first_line_start_index wasn't
	being updated correctly on insertion and deletion.
	
	- Added new public macro GTK_TEXT_INDEX (text, ind), and 
	function gtk_text_get_chars(text, index, nchars);
	
Thu Feb 26 22:36:46 1998  Owen Taylor  <owt1@cornell.edu>

	* gdk/gdkwindow.c gdktypes.c gdk.h: 
	new functions for setting WM hints

	 gdk_window_set_icon()
	 gdk_window_set_icon_name()
	 gdk_window_set_group()
	 gdk_window_set_decorations()
	 gdk_window_set_functions()

	* gdk/MwmUtil.h: new uninstalled header file from lesstif 
	distribution, used for setting MWM hints.

	* gdk/gdkdnd.c Makefile.am: renamed from gdk/gdk_dnd.c
	
	* gtk/gtkhandlebox.c (gtk_handle_box_realize): Use MWM hints
	to undecorate window.

	* gtk/testgtk.c gtk/circles.xbm: new test for WM hints.

Wed Feb 25 22:56:42 1998  Tim Janik  <timj@gimp.org>